--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,17 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding: 5px;
+  padding: 10px;
   margin-left: 0px;
   border-top: 1px solid #3f3f3f;
-
 }
+
+#new-message input {
+  width: 100%;
+  padding: 20px;
+  margin-left: 0px;
+}
+
 #messages-list {
   padding: 5px 0 0 5px;
 }
